--- a/adding-azure-user/nm-factory-inf-pip-operation-adding-user-to-azure.yml
+++ b/adding-azure-user/nm-factory-inf-pip-operation-adding-user-to-azure.yml
@@ -231,8 +231,8 @@ stages:
         inlineScript: |
           #!/bin/bash    
 
-          echo "Login to az devops to allow PR creation"
-          echo $(mypat) | az devops login
+          echo "Login to az devops to allow PR approvation and merged"
+          echo $(mypat) | az devops login --oragnization $ORGURL
 
           echo "Get the PR ID to perform the merge action"
           PRID=`az repos pr list --org $ORGURL -p $PROJECT -r $AZUREREPO -s $BRANCHTARGET | grep codeReviewId | awk '{print $2}' | cut -d',' -f1`
