feat(Correct-automerge): Added the correspond variable group to include mypat secret variable

--- a/adding-azure-user/nm-factory-inf-pip-operation-adding-user-to-azure.yml
+++ b/adding-azure-user/nm-factory-inf-pip-operation-adding-user-to-azure.yml
@@ -11,6 +11,9 @@ resources:
     type: git
     name: ecl-ado-prj-iac/nm-factory-inf-env-pro
 
+variables:
+- group: factory-azure-mgmt
+
 parameters:
 - name: mail
   displayName: User Email
