--- a/adding-azure-user/nm-factory-inf-pip-operation-adding-user-to-azure.yml
+++ b/adding-azure-user/nm-factory-inf-pip-operation-adding-user-to-azure.yml
@@ -251,6 +251,9 @@ stages:
             az repos pr update --org $ORGURL --id $PRID --status completed
           fi
 
+          echo "Logout from Azure account"
+          az logout
+
     - task: AzureCLI@2
       displayName: "Added user license for Azure Devops" 
       env:
@@ -330,6 +333,9 @@ stages:
 
           echo "Get the PR ID to perform the merge action"
           PRID=`az repos pr list --org $ORGURL -p $PROJECT -r $AZUREDEVOPSREPO -s $BRANCHTARGET | grep codeReviewId | awk '{print $2}' | cut -d',' -f1`
+
+          echo "Logout from Azure account"
+          az logout
 
           if [[ -z "$PRID" ]]
           then
