--- a/Maintenance/nm-factory-inf-pip-operation-stop-akstest.yml
+++ b/Maintenance/nm-factory-inf-pip-operation-stop-akstest.yml
@@ -28,19 +28,11 @@ stages:
         ARM_TENANT_ID: "9e296acd-1e44-44f0-8c77-cc9dbce85489"  #Must move to KeyValut or inside provider.tf
       inputs:
         azureSubscription: 'ecl-az-fact-svc-01-armconnection'
-        scriptType: 'bash'
+        scriptType: 'ps'
         scriptLocation: 'inlineScript'
         inlineScript: |
-          #!/bin/bash
 
-          echo "Login as Build Service to check that the login works"
-          echo $(System.AccessToken) | az devops login
-
-          echo "Logout from Build Service"
-          az logout
-
-          echo "Login to Azure as naiaragarcia@paradigmadigital.com to allow stooping the AKS Cluster"
-          code=`echo $(mypat) | az login`
-          echo $code
-#          echo "Stop AKStest Cluster"
-#          az aks stop --name ecl-az-fact-cls-01-akstest --resource-group tes-te-test-tes-01-test --subscription azure-euroctl-hub-subs
+#          echo "Login to Azure as naiaragarcia@paradigmadigital.com to allow stooping the AKS Cluster"
+#          code=`echo $(mypat) | az login`
+#          echo $code
+          az aks stop --name ecl-az-fact-cls-01-akstest --resource-group tes-te-test-tes-01-test --subscription azure-euroctl-hub-subs
