--- a/Maintenance/nm-factory-inf-pip-operation-start-akstest.yml
+++ b/Maintenance/nm-factory-inf-pip-operation-start-akstest.yml
@@ -15,9 +15,9 @@ variables:
 #  always: true
 
 stages:
-- stage: Stop_AKStest_cluster
+- stage: Start_AKStest_cluster
   jobs:
-  - job: stop_akstest_cluster
+  - job: start_akstest_cluster
 
     steps:
     - task: AzureCLI@2
