--- a/Maintenance/nm-factory-inf-pip-operation-stop-akstest.yml
+++ b/Maintenance/nm-factory-inf-pip-operation-stop-akstest.yml
@@ -6,13 +6,13 @@ pool:
 variables:
 - group: factory-azure-mgmt
 
-#schedules:
-#- cron: "30 19 * * *"
-#  displayName: Stopping the AKStest cluster
-#  branches:
-#    include:
-#    - main
-#  always: true
+schedules:
+- cron: "00 * * * *"
+  displayName: Stopping the AKStest cluster
+  branches:
+    include:
+    - main
+  always: true
 
 stages:
 - stage: Stop_AKStest_cluster
