feat(DF-517): Added scheduling from Monday to Friday to start the cluster at 7:30 and to stop it at 19:00

--- a/Maintenance/nm-factory-inf-pip-operation-start-aksdev.yml
+++ b/Maintenance/nm-factory-inf-pip-operation-start-aksdev.yml
@@ -3,13 +3,13 @@ name: nm-factory-inf-pip-operation-start-aksdev
 pool:
   name: Factory-VSS-Agents
 
-#schedules:
-#- cron: "40 * * * *"
-#  displayName: Starting the AKStest cluster
-#  branches:
-#    include:
-#    - main
-#  always: true
+schedules:
+- cron: "30 7 * * 1-5"
+  displayName: Starting the AKStest cluster
+  branches:
+    include:
+    - main
+  always: true
 
 stages:
 - stage: Start_AKSdev_cluster
