feat(DF-517): Changed the scheduling to be run everyday instead of weekdays

--- a/Maintenance/nm-factory-inf-pip-operation-start-aksdev.yml
+++ b/Maintenance/nm-factory-inf-pip-operation-start-aksdev.yml
@@ -4,7 +4,7 @@ pool:
   name: Factory-VSS-Agents
 
 schedules:
-- cron: "30 7 * * 1-5"
+- cron: "30 7 * * *"
   displayName: Starting the AKStest cluster
   branches:
     include:
