--- a/Maintenance/nm-factory-inf-pip-operation-stop-aksdev.yml
+++ b/Maintenance/nm-factory-inf-pip-operation-stop-aksdev.yml
@@ -4,7 +4,7 @@ pool:
   name: Factory-VSS-Agents
 
 schedules:
-- cron: "00 19 * * 1-5"
+- cron: "00 19 * * *"
   displayName: Stopping the AKStest cluster
   branches:
     include:
