feat(DF-517): Modify the branch to be used for the scheduling

--- a/Maintenance/nm-factory-inf-pip-operation-start-aksdev.yml
+++ b/Maintenance/nm-factory-inf-pip-operation-start-aksdev.yml
@@ -4,11 +4,11 @@ pool:
   name: Factory-VSS-Agents
 
 schedules:
-- cron: "30 7 * * *"
+- cron: "30 7 * * 1-5"
   displayName: Starting the AKStest cluster
   branches:
     include:
-    - main
+    - feat/DF-517-stop-start-aksdev
   always: true
 
 stages:
