--- a/Maintenance/nm-factory-inf-pip-operation-stop-aksdev.yml
+++ b/Maintenance/nm-factory-inf-pip-operation-stop-aksdev.yml
@@ -4,11 +4,11 @@ pool:
   name: Factory-VSS-Agents
 
 schedules:
-- cron: "00 19 * * *"
+- cron: "00 18 * * 1-5"
   displayName: Stopping the AKStest cluster
   branches:
     include:
-    - main
+    - feat/DF-517-stop-start-aksdev
   always: true
 
 stages:
