--- a/adding-azure-user/nm-factory-inf-pip-operation-adding-user-to-azure.yml
+++ b/adding-azure-user/nm-factory-inf-pip-operation-adding-user-to-azure.yml
@@ -377,26 +377,51 @@ stages:
               fi
             fi    
 
-            echo "Get the PR ID to perform the merge action"
-            PRID=`az repos pr list --org $ORGURL -p $PROJECT -r $AZUREDEVOPSREPO -s $BRANCHTARGET | grep codeReviewId | awk '{print $2}' | cut -d',' -f1`
-
-            echo "Logout from Azure account"
+            echo "Logout from azure account"
             az logout
-
-            if [[ -z "$PRID" ]]
-            then
-              echo "PR does not exist"
-            else
-              echo "Login to az devops as naiaragarcia@paradigmadigital.com"
-              echo $(mypat) | az devops login
-
-              echo "Approve the PR created"
-              az repos pr set-vote --org $ORGURL --id $PRID --vote approve
-
-              echo "Merging the PR with main"
-              az repos pr update --org $ORGURL --id $PRID --status completed
-            fi
 
           else
             echo "The mail format is not correct"  
+          fi
+
+    - task: AzureCLI@2
+      displayName: "Merging with main branch at repository ${{ variables.AZUREDEVOPSREPO }}" 
+      env:
+        ARM_CLIENT_ID: $(terraform-app-client-id)
+        ARM_CLIENT_SECRET: $(terraform-app-secret)
+        ARM_TENANT_ID: "9e296acd-1e44-44f0-8c77-cc9dbce85489"  #Must move to KeyValut or inside provider.tf
+      inputs:
+        azureSubscription: 'ecl-az-fact-svc-01-armconnection'
+        scriptType: 'bash'
+        scriptLocation: 'inlineScript'
+        inlineScript: |
+          #!/bin/bash    
+
+          echo "Checking that mail address is correct"
+          if [[ ${{ parameters.mail }} =~ "@paradigmadigital.com" ]] || [[ ${{ parameters.mail }} =~ "#EXT#@asistemaspt.onmicrosoft.com" ]]
+          then
+
+            if [[ ${{ parameters.option }} == dplt_pipeline ]] || [[ ${{ parameters.option }} == avitech_slovakia ]] || [[ ${{ parameters.option }} == remove_user ]]
+            then
+
+              echo "Login to az devops to allow PR approvation and merged"
+              echo $(mypat) | az devops login --organization $ORGURL
+
+              echo "Get the PR ID to perform the merge action"
+              PRID=`az repos pr list --org $ORGURL -p $PROJECT -r $AZUREDEVOPSREPO -s $BRANCHTARGET | grep codeReviewId | awk '{print $2}' | cut -d',' -f1`
+
+              if [[ -z "$PRID" ]]
+              then
+                echo "PR does not exist"
+              else
+                echo "Approve the PR created"
+                az repos pr set-vote --org $ORGURL --id $PRID --vote approve
+
+                echo "Merging the PR with main"
+                az repos pr update --org $ORGURL --id $PRID --status completed
+              fi
+            fi
+          
+          else
+            echo "The mail format is not correct" 
           fi
