--- a/adding-azure-user/nm-factory-inf-pip-operation-adding-user-to-azure.yml
+++ b/adding-azure-user/nm-factory-inf-pip-operation-adding-user-to-azure.yml
@@ -359,6 +359,10 @@ stages:
               echo "terraform apply"
               terraform apply -auto-approve
 
+              echo "Install Azure Devops extension"
+              az config set extension.use_dynamic_install=yes_without_prompt
+              az extension add --name azure-devops
+
               echo "Create needed variables for the PR at $AZUREDEVOPSREPO repository"
               STATUS=`curl -u :$(System.AccessToken) $AZUREDEVURIBRANCHSTATUS | jq -r .aheadCount`
               ACTIVEPR=`curl -u :$(System.AccessToken) $AZUREDEVURICHECKACTIVEPR | jq -r .count`
