Checking mail format

--- a/adding-azure-user/nm-factory-inf-pip-operation-adding-user-to-azure.yml
+++ b/adding-azure-user/nm-factory-inf-pip-operation-adding-user-to-azure.yml
@@ -320,6 +320,7 @@ stages:
               else
                 user_mail=${{ parameters.mail }}
               fi
+              echo $user_mail
 
               case ${{ parameters.option }} in
                 dplt_pipeline)
