feat(DF-517): Confirmed the scheduling to be launched at main branch starting AKSdev cluster at 5:30UTC and stopping it at 17:00UTC

--- a/Maintenance/nm-factory-inf-pip-operation-start-aksdev.yml
+++ b/Maintenance/nm-factory-inf-pip-operation-start-aksdev.yml
@@ -8,7 +8,7 @@ schedules:
   displayName: Starting the AKStest cluster
   branches:
     include:
-    - feat/DF-517-stop-start-aksdev
+    - main
   always: true
 
 stages:
